fixed index and radius
no key on index.html
default radius wrong

--- a/index.html
+++ b/index.html
@@ -169,9 +169,9 @@
 
         $(function() {
           var myMap = new MapsLib({
-            fusionTableId:      "1m4Ez9xyTGfY2CU6O-UgEcPzlS0rnzLU93e4Faa0",
-            googleApiKey:       "AIzaSyA3FQFrNr5W2OEVmuENqhb2MBB2JabdaOY",
-            locationColumn:     "geometry",
+            fusionTableId:      "1kQsl9L5PjzzEoKA_ZztpqyI_bkiLkm8VzemiUKeS",
+            googleApiKey:       "AIzaSyB4brGoI__ViNcTUhPQ1wQyojJgZ1uY3HQ",
+            locationColumn:     "Site Address",
             map_center:         [41.8781136, -87.66677856445312],
             locationScope:      "chicago"
           });
