--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
           var myMap = new MapsLib({
             fusionTableId:      "1kQsl9L5PjzzEoKA_ZztpqyI_bkiLkm8VzemiUKeS",
             googleApiKey:       "AIzaSyB4brGoI__ViNcTUhPQ1wQyojJgZ1uY3HQ",
-            locationColumn:     "Site Address",
+            locationColumn:     "'Site Address'",
             map_center:         [41.8781136, -87.66677856445312],
             locationScope:      "chicago"
           });
